<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:background="@color/LightGreen">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title_activity_main"
        android:textSize="28sp"
        android:background="@color/SeaGreen"
        android:padding="10dp"/>

    <EditText
        android:id="@+id/ownerInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/owner_hint" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/species_label"/>


    <ListView
        android:id="@+id/speciesList"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/age_label"/>

        <TextView
            android:layout_marginStart="5dp"
            android:id="@+id/ageTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/age_default"/>

        <SeekBar
            android:id="@+id/ageSeekBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:min="0"
            android:max="20"/>
    </LinearLayout>

    <EditText
        android:id="@+id/symptomsInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/symptoms_hint"/>

    <EditText
        android:id="@+id/timeInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="time"
        android:text="@string/time_default"/>

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/submit_button"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/summary"/>


</LinearLayout>